# Application_demo

./: readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/final_app/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gen-libs/: build.gradle
gen-libs/src/main/cpp/TodoItem/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Project.sln  TodoItem.vcxproj  TodoItem.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
gen-libs/src/main/cpp/TodoItem/src/: TodoItem.cpp  TodoItem.h
gradle/wrapper/: gradle-wrapper.properties
